fixed align text

--- a/src/pages/Pricing/style.scss
+++ b/src/pages/Pricing/style.scss
@@ -121,7 +121,7 @@
       text-transform: uppercase;
       font-size: 1.2rem;
       text-align: center;
-      
+      max-width: 80%;
       color: #E6CB53;
     }
 
